# goit-python-hw-23-email

HM13-DJANGO/: README.md  pyproject.toml
HM13-DJANGO/quotes_scrape/: manage.py  mongo-postgres.py
HM13-DJANGO/quotes_scrape/qtsapp/: apps.py  forms.py  models.py  urls.py  views.py
HM13-DJANGO/quotes_scrape/qtsapp/migrations/: 0001_initial.py
HM13-DJANGO/quotes_scrape/qtsapp/templates/qtsapp/: about_author.html  author.html  base.html  detail.html  index.html  quote.html
HM13-DJANGO/quotes_scrape/quotes_scrape/: asgi.py  settings.py  urls.py  wsgi.py
HM13-DJANGO/quotes_scrape/users/: forms.py  views.py
HM13-DJANGO/quotes_scrape/users/templates/users/: login.html  signup.html
HM13-MAIL-2/: README.md  main.py  pyproject.toml
HM13-MAIL-2/postgres-data/base/1/: 2619  pg_internal.init
HM13-MAIL-2/postgres-data/base/5/: 1247  1249  1259  16387  16390  16392  16393  16399  16401  16402  16408  16410  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  (+1 more)
HM13-MAIL-2/postgres-data/global/: 1260  pg_control  pg_internal.init
HM13-MAIL-2/postgres-data/pg_stat/: pgstat.stat
HM13-MAIL-2/src/: schemas.py
HM13-MAIL-2/src/database/: db.py
HM13-MAIL-2/src/repository/: contacts.py  users.py
HM13-MAIL-2/src/routes/: auth.py  contacts.py
HM13-MAIL-2/src/services/: auth.py  email.py
