[tool.poetry]
name = "hm13-django"
version = "0.1.0"
description = ""
authors = ["Anatolii6974 <anatolii.perfilov@gmail.com>"]
readme = "README.md"
packages = [{include = "hm13_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
psycopg2 = "^2.9.9"
pymongo = "^4.6.1"
mongoengine = "^0.27.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
